--- a/Linked-List/LinkedList.html
+++ b/Linked-List/LinkedList.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
-    <script src="LinkedList.js"></script>
+    <script src="Day3.js"></script>
 </body>
 </html>
